--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@csstools/normalize.css": "^11.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-sharp": "^2.10.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.2.3",
+    "styled-normalize": "^8.0.7"
   }
 }
