--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-marquee": "^1.0.0",
     "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7"
   }
