--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@csstools/normalize.css": "^11.0.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^10.0.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -26,6 +27,7 @@
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-source-wordpress": "^5.9.1",
     "gatsby-transformer-sharp": "^2.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
