--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
+    "deploy": "gatsby-plugin-s3 deploy --yes",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
