--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-wordpress": "^5.9.1",
     "gatsby-transformer-sharp": "^2.10.0",
+    "html-react-parser": "^1.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
